--- a/compose.yml
+++ b/compose.yml
@@ -18,7 +18,7 @@ services:
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: todoapp
+      POSTGRES_DB: reversi
     ports:
       - "5432:5432"
     volumes:
