--- a/compose.yml
+++ b/compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - DATABASE_URL=postgresql://user:password@db:5432/todoapp
+      - DATABASE_URL=postgresql://user:password@db:5432/reversi
     ports:
       - "3000:3000"
     volumes:
@@ -23,5 +23,16 @@ services:
       - "5432:5432"
     volumes:
       - reversi_db:/var/lib/postgresql/data
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - "8080:8080"
+    environment:
+      ADMINER_DEFAULT_SERVER: db
+      ADMINER_DEFAULT_DB: reversi
+    depends_on:
+      - db
 volumes:
   reversi_db:
